--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ USE_RANDOM_TEMPLATES=
 RANDOM_TEMPLATES_ID=
 
 NIGHT_MODE=
-SLEEP_TIME=[0, 30]
+SLEEP_TIME=30
 DELAY_EACH_ACCOUNT=
 SLEEP_TIME_BETWEEN_EACH_ROUND=
 
